--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-coffee": "~1.4.2",
     "gulp-jade": "~0.5.0",
     "gulp-sass": "0.7.3",
-    "gulp-connect": "2.0.6"
+    "gulp-connect": "2.0.6",
+    "gulp-concat": "2.4.1"
   }
 }
